--- a/peking_study/homework.html
+++ b/peking_study/homework.html
@@ -296,8 +296,7 @@
     images: [
       'yy1.jpg',
       'yy2.JPG',
-      'yy3.JPG',
-      'yy1.JPG',
+      'yy3.jpg',,
 
     ],
     time: '1.5小时',
@@ -328,8 +327,6 @@
       '<br><br>不过，现在回想起来，正是那段艰难的岁月，造就了今天的我。从白塔寺里漫步，我大概会这样向好朋友倾诉这段难忘的回忆。',
     images: [
       'sz1.png',
-      '/api/placeholder/800/500',
-      '/api/placeholder/800/500',
     ],
     time: '30分钟',
     nextStop: '步行20分钟',
