--- a/peking_study/homework.html
+++ b/peking_study/homework.html
@@ -181,7 +181,7 @@
 <body>
     <header class="header">
         <h1>北京研究</h1>
-        <p>总共两天的文化之旅 -- 郑龙湖 社会学系 2300093105</p>
+        <p>历史三天的文化之旅 -- 郑龙湖 社会学系 2300093105</p>
     </header>
 
     <div class="container">
